--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=backend
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/lyriclens
+spring.datasource.username=ayaanali
+spring.datasource.password=haikyuu@30
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
