--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=backend
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/lyriclens
 spring.datasource.username=ayaanali
-spring.datasource.password=haikyuu@30
+spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
