--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.application.name=backend
 spring.datasource.url=jdbc:postgresql://localhost:5432/lyriclens
 spring.datasource.username=ayaanali
 spring.datasource.password=
+gemini.api.key=AIzaSyBITUcL2T3jtRwvMdmhrvmLdPrOFUvQdGM
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
