--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,3 +8,7 @@ gemini.api.key=AIzaSyBITUcL2T3jtRwvMdmhrvmLdPrOFUvQdGM
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spotify.client.id=YOUR_SPOTIFY_CLIENT_ID
+spotify.client.secret=YOUR_SPOTIFY_CLIENT_SECRET
+spotify.redirect.uri=http://localhost:8080/auth/spotify/callback
