--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-spotify.client.id=YOUR_SPOTIFY_CLIENT_ID
-spotify.client.secret=YOUR_SPOTIFY_CLIENT_SECRET
-spotify.redirect.uri=http://localhost:8080/auth/spotify/callback
+spotify.client.id=0f867b9d818d454499864909296ce670
+spotify.client.secret=11e6367d1f6f40a79441a44ec91bdd5e
+spotify.redirect.uri=http://127.0.0.1:8080/auth/spotify/callback
+
+genius.api.token=YOUR_GENIUS_ACCESS_TOKEN_HERE
