--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 spring.application.name=backend
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/lyriclens
-spring.datasource.username=ayaanali
+spring.datasource.username=USERNAME
 spring.datasource.password=
-gemini.api.key=AIzaSyBITUcL2T3jtRwvMdmhrvmLdPrOFUvQdGM
+gemini.api.key=GEMINI_API_KEY
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-spotify.client.id=0f867b9d818d454499864909296ce670
-spotify.client.secret=11e6367d1f6f40a79441a44ec91bdd5e
+spotify.client.id=SPOTIFY_CLIENT_ID
+spotify.client.secret=SPOTIFY_CLIENT_SECRET
 spotify.redirect.uri=http://127.0.0.1:8080/auth/spotify/callback
 
-genius.api.token=uPztYnunW5i9WldSHiP-WVnzBEnqFRdGtwFthmydKeoJg8pQ7EvrJeRDL0iw3jFX
+genius.api.token=GENIUS_TOKEN
